@@ -4974,7 +4974,7 @@ error options:
 PHP_FUNCTION(error_log)
 {
 	zval **string, **erropt = NULL, **option = NULL, **emailhead = NULL;
-	int opt_err = 0;
+	int opt_err = 0, message_len = 0;
 	char *message, *opt = NULL, *headers = NULL;
 
 	switch (ZEND_NUM_ARGS()) {
@@ -5018,6 +5018,7 @@ PHP_FUNCTION(error_log)
 
 	convert_to_string_ex(string);
 	message = Z_STRVAL_PP(string);
+	message_len = Z_STRLEN_PP(string);
 
 	if (erropt != NULL) {
 		convert_to_long_ex(erropt);
@@ -5034,7 +5035,7 @@ PHP_FUNCTION(error_log)
 		headers = Z_STRVAL_PP(emailhead);
 	}
 
-	if (_php_error_log(opt_err, message, opt, headers TSRMLS_CC) == FAILURE) {
+	if (_php_error_log_ex(opt_err, message, message_len, opt, headers TSRMLS_CC) == FAILURE) {
 		RETURN_FALSE;
 	}
 	
@@ -5042,18 +5043,21 @@ PHP_FUNCTION(error_log)
 }
 /* }}} */
 
-
+/* For BC (not binary safe!) */
 PHPAPI int _php_error_log(int opt_err, char *message, char *opt, char *headers TSRMLS_DC)
+{
+	return _php_error_log_ex(opt_err, message, (opt_err == 3) ? strlen(message) : 0, opt, headers TSRMLS_CC);
+}
+
+PHPAPI int _php_error_log_ex(int opt_err, char *message, int message_len, char *opt, char *headers TSRMLS_DC)
 {
 	php_stream *stream = NULL;
 
-	switch (opt_err) {
-
+	switch (opt_err)
+	{
 		case 1:		/*send an email */
-			{
-				if (!php_mail(opt, "PHP error_log message", message, headers, NULL TSRMLS_CC)) {
-					return FAILURE;
-				}
+			if (!php_mail(opt, "PHP error_log message", message, headers, NULL TSRMLS_CC)) {
+				return FAILURE;
 			}
 			break;
 
@@ -5064,11 +5068,13 @@ PHPAPI int _php_error_log(int opt_err, char *message, char *opt, char *headers T
 
 		case 3:		/*save to a file */
 			stream = php_stream_open_wrapper(opt, "a", IGNORE_URL_WIN | ENFORCE_SAFE_MODE | REPORT_ERRORS, NULL);
-			if (!stream)
+			if (!stream) {
 				return FAILURE;
-			php_stream_write(stream, message, strlen(message));
+			}
+			php_stream_write(stream, message, message_len);
 			php_stream_close(stream);
 			break;
+
 		case 4: /* send to SAPI */
 			if (sapi_module.log_message) {
 				sapi_module.log_message(message);
@@ -5076,6 +5082,7 @@ PHPAPI int _php_error_log(int opt_err, char *message, char *opt, char *headers T
 				return FAILURE;
 			}
 			break;
+
 		default:
 			php_log_err(message TSRMLS_CC);
 			break;
